fix: dark mode styles

--- a/src/app/country/[alpha]/page.module.scss
+++ b/src/app/country/[alpha]/page.module.scss
@@ -5,10 +5,12 @@
 
 .flagSection {
     width: 50%;
-    padding: 5rem;
+    padding: 0 10rem;
+    padding-top: 3rem;
 }
 
 .flagWrapper {
+    margin-top: 3rem;
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -53,8 +55,4 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-
-    a {
-        
-    }
 }
