--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -1,5 +1,5 @@
 .root {
-
+  background-color: var(--element-color);
   width: 20ch;
   display: inline-flex;
   flex-direction: column;
@@ -49,6 +49,7 @@
 
 
 .options {
+  background-color: var(--element-color);
   margin-top: 3px;
   border-radius: 3px;
   position: absolute;
@@ -56,7 +57,6 @@
   left: 0;
   width: 100%;
   z-index: 1000;
-  background-color: #fff;
   box-shadow: 0px 1px 2px rgba(6, 78, 59, 0.06), 0px 1px 3px rgba(6, 78, 59, 0.1);
   overflow-y: auto;
   overflow-x: hidden
@@ -64,12 +64,10 @@
 
 .option {
   font-size: 1rem;
-  color: var(--text-color);
   cursor: pointer;
   padding: 0.5rem 1rem;
 
   &:hover {
       background-color: var(--element-color);
-      color: var(--text-color);
   }
 }
