--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -7,6 +7,8 @@
 
 body {
   font-family: var(--nunito);
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 ul {
@@ -18,10 +20,6 @@ a {
   text-decoration: none;
 }
 
-hr {
-  border: 0;
-  border-top: 1px dotted #efefef;
-}
 
 img {
   max-width: 100%;
