--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,7 +5,6 @@
   --text-color: hsl(0, 0%, 100%);
   --background-color: hsl(207, 26%, 17%);
   --element-color: hsl(209, 23%, 22%);
-  --input-background-color: hsl(0, 0%, 52%);
 	
 	/* Asks browser to behave in dark mode */
 	color-scheme: dark;
@@ -18,5 +17,4 @@
   --text-color: hsl(200, 15%, 8%);
   --background-color: hsl(0, 0%, 98%);
   --element-color: hsl(0, 0%, 100%);
-  --input-background-color: hsl(0, 0%, 100%);
 }
